[project]
name = "repl-nix-mind-meld-web"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "gensim>=4.3.3",
    "numpy>=1.26.4",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
]
